# kicad-ai-checker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
kicad-dev-docs/file-formats/sexpr-footprint/: _index.en.adoc
kicad-dev-docs/file-formats/sexpr-intro/: _index.en.adoc
kicad-dev-docs/file-formats/sexpr-pcb/: _index.en.adoc
kicad-dev-docs/file-formats/sexpr-schematic/: _index.en.adoc
kicad-dev-docs/file-formats/sexpr-symbol-lib/: _index.en.adoc
kicad-dev-docs/file-formats/sexpr-worksheet/: _index.en.adoc
src/kischk/: __init__.py
src/kischk/kicad/: __init__.py  electrical_builder.py  electrical_model.py  netlist.py  project.py  sch_model.py  sch_parser.py
test_kicad_project/: fp-lib-table  mcu.kicad_sch  mcu.kicad_sch_old  power_supply.kicad_sch  power_supply.kicad_sch_old  rs232.kicad_sch  rs232.kicad_sch_old  slot-rs232-pi-hat.kicad_pcb  slot-rs232-pi-hat.kicad_pro  slot-rs232-pi-hat.kicad_sch  slot-rs232-pi-hat.kicad_sch_old  slot_lib.kicad_sym  sym-lib-table
tests/: test_electrical_builder.py  test_netlist.py  test_project_loader.py  test_sch_parser.py
